@@ -1,5 +1,6 @@
 Changelog for LedgerSMB 1.2.0
 
+* Added logging module (Jason R)
 * Corrected parsing of numbers so that they are multi-run safe (Chris T)
 * Added first version of rpm spec from Mads Kiilerich (Chris T)
 * Added "1 000.00" number format (Chris T)
